syntax = "proto3";

package rivet.backend.pkg.game.validate;

import "proto/common.proto";

message Request {
	string name_id = 1;
	string display_name = 2;
}

message Response {
	message Error {
		repeated string path = 1;
	}

	repeated Error errors = 1;
}
